infra/platform/monitoring/grafana/grafana-forwardauth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: monitoring-grafana-authelia-forwardauth
  namespace: monitoring
spec:
  forwardAuth:
    address: http://authelia.authelia.svc.cluster.local/auth/api/authz/forward-auth
    trustForwardHeader: true
    maxResponseBodySize: 1048576
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Name
      - Remote-Email
