infra/platform/monitoring/grafana/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: public-gateway
      namespace: traefik
      sectionName: websecure
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /grafana/
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: monitoring-grafana-authelia-forwardauth
      backendRefs:
        - name: monitoring-grafana
          port: 80
